# yaku

./: .gitignore  README.md  pyproject.toml
configs/: default.yaml  profile.example.yaml
profiles/: TEST.yaml
scripts/: bench_fake_pipeline.py
src/yaku/: __init__.py  main.py
src/yaku/core/: __init__.py  cache.py  capture.py  config.py  context_memory.py  env.py  errors.py  events.py  hash_gate.py  image_utils.py  logging.py  metrics.py  pipeline.py  profiles.py  text_cleanup.py
src/yaku/ocr/: base.py  dummy.py  factory.py  manga_ocr_backend.py  paddleocr_backend.py
src/yaku/render/: __init__.py  font_match.py  text_draw.py  (+1 more)
tests/: conftest.py  test_ai_text_edit_fallback.py  test_cache.py  test_capture_backend_selection.py  test_capture_regions.py  test_config.py  test_context_memory.py  test_coordinate_map.py  test_duplicate_suppression.py  test_e2e_fake_v1.py  test_e2e_fake_v2.py  test_env.py  test_error_boundaries.py  test_frame_renderer.py  test_frame_renderer_inpaint.py  test_glossary_prompt.py  test_graceful_shutdown.py  test_hash_gate.py  test_health_check.py  test_inpaint.py  test_input_coordinate_conversion.py  test_latency_metrics.py  test_main_dispatch.py  test_main_window.py  test_mirror_regions.py  test_no_duplicate_jobs.py  test_ocr_dummy.py  test_ocr_factory.py  test_ocr_paddle.py  test_overlay_config_persistence.py  test_pipeline_cache_flow.py  test_profiles.py  test_region_persistence.py  test_region_selector.py  test_text_cleanup.py  test_text_fit.py  test_translation_prompt.py  test_translator_deepl.py  test_translator_llama_cpp.py
(+24 files in other folders)
