[project]
name = "yaku"
version = "0.1.0"
description = "Two-mode AI visual novel translator"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pyqt6>=6.6.0",
    "pydantic>=2.0",
    "pyyaml>=6.0",
    "pillow>=10.0",
    "numpy>=1.24",
    "opencv-python>=4.8",
    "imagehash>=4.3",
    "httpx>=0.27",
    "mss>=10.2.0",
    "dxcam>=0.3.0",
    "pywin32>=311",
    "manga-ocr>=0.1.14",
    "paddleocr==3.6.0",
    "paddlepaddle==3.0.0",
]

[project.optional-dependencies]
capture = [
    "mss>=9.0",
]
win-capture = [
    "pywin32>=306",
]
ocr-manga = [
    "manga-ocr>=0.1.10",
]
ocr-paddle = [
    "paddleocr>=2.7",
]

[dependency-groups]
dev = ["pytest>=8.0"]

[project.scripts]
yaku = "yaku.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/yaku"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"
